test/error/error.input87.zc
Bad type in member list on line 4
